--- a/DwMember/Base.lproj/Main.storyboard
+++ b/DwMember/Base.lproj/Main.storyboard
@@ -178,26 +178,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lii-mC-x0C">
-                                <rect key="frame" x="20" y="60" width="374" height="376"/>
+                                <rect key="frame" x="20" y="55" width="374" height="351"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-pt-ZOA">
-                                        <rect key="frame" x="18" y="28" width="338" height="320"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-pt-ZOA">
+                                        <rect key="frame" x="18" y="28" width="338" height="295"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dyj-FM-dVl">
-                                                <rect key="frame" x="69" y="0.0" width="200" height="200"/>
+                                                <rect key="frame" x="79" y="0.0" width="180" height="180"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="200" id="Ba8-nK-cgd"/>
-                                                    <constraint firstAttribute="width" constant="200" id="woF-oH-z3r"/>
+                                                    <constraint firstAttribute="height" constant="180" id="Ba8-nK-cgd"/>
+                                                    <constraint firstAttribute="width" constant="180" id="woF-oH-z3r"/>
                                                 </constraints>
                                             </imageView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJE-x5-tUo">
-                                                <rect key="frame" x="148.33333333333334" y="210" width="41.666666666666657" height="0.0"/>
+                                                <rect key="frame" x="148.33333333333334" y="187.66666666666669" width="41.666666666666657" height="0.0"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.67013078930000003" green="0.2353583574" blue="0.25085872409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZLY-Q7-2OG">
-                                                <rect key="frame" x="0.0" y="220" width="338" height="100"/>
+                                                <rect key="frame" x="0.0" y="195" width="338" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="FC2-Q3-tP8"/>
                                                 </constraints>
@@ -240,7 +240,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="掃描上方安全碼" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqC-Rb-ns4">
-                                <rect key="frame" x="146.33333333333334" y="599" width="121.33333333333334" height="26"/>
+                                <rect key="frame" x="146.33333333333334" y="610" width="121.33333333333334" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="F2h-sf-H0Q"/>
                                 </constraints>
@@ -249,7 +249,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glx-nq-rXE">
-                                <rect key="frame" x="196" y="461" width="22" height="113"/>
+                                <rect key="frame" x="196" y="426" width="22" height="21.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -257,15 +257,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.65818554162979126" green="0.054485879838466644" blue="0.16733917593955994" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="DqC-Rb-ns4" firstAttribute="top" secondItem="glx-nq-rXE" secondAttribute="bottom" constant="25" id="1gw-iS-kKb"/>
                             <constraint firstItem="lii-mC-x0C" firstAttribute="leading" secondItem="OIF-Df-2x0" secondAttribute="leadingMargin" id="6eH-YX-Nj9"/>
                             <constraint firstAttribute="bottom" secondItem="m6M-Bc-X8G" secondAttribute="bottom" constant="20" symbolic="YES" id="Cin-75-2WU"/>
                             <constraint firstItem="DqC-Rb-ns4" firstAttribute="centerX" secondItem="m6M-Bc-X8G" secondAttribute="centerX" id="EgG-lQ-dkJ"/>
                             <constraint firstItem="lii-mC-x0C" firstAttribute="centerX" secondItem="glx-nq-rXE" secondAttribute="centerX" id="H2p-H8-qLP"/>
                             <constraint firstItem="lii-mC-x0C" firstAttribute="trailing" secondItem="OIF-Df-2x0" secondAttribute="trailingMargin" id="dW8-MR-dom"/>
-                            <constraint firstItem="m6M-Bc-X8G" firstAttribute="top" secondItem="DqC-Rb-ns4" secondAttribute="bottom" constant="31" id="gPV-yB-Dzl"/>
-                            <constraint firstItem="lii-mC-x0C" firstAttribute="top" secondItem="z89-qq-dKI" secondAttribute="bottom" constant="40" id="hq0-8n-WbV"/>
-                            <constraint firstItem="glx-nq-rXE" firstAttribute="top" secondItem="lii-mC-x0C" secondAttribute="bottom" constant="25" id="jYZ-OO-9Dw"/>
+                            <constraint firstItem="m6M-Bc-X8G" firstAttribute="top" secondItem="DqC-Rb-ns4" secondAttribute="bottom" constant="20" id="gPV-yB-Dzl"/>
+                            <constraint firstItem="lii-mC-x0C" firstAttribute="top" secondItem="z89-qq-dKI" secondAttribute="bottom" constant="35" id="hq0-8n-WbV"/>
+                            <constraint firstItem="glx-nq-rXE" firstAttribute="top" secondItem="lii-mC-x0C" secondAttribute="bottom" constant="20" id="jYZ-OO-9Dw"/>
                             <constraint firstItem="glx-nq-rXE" firstAttribute="centerX" secondItem="DqC-Rb-ns4" secondAttribute="centerX" id="z0a-2t-fdu"/>
                         </constraints>
                     </view>
